using server and updated with changes

--- a/public/index.html
+++ b/public/index.html
@@ -95,6 +95,6 @@
   </main>
 
   <!-- Our app logic -->
-  <script src="app.js"></script>
+  <script src="app.js" type="module"></script>
 </body>
 </html>
